javascript type conversion

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript</title>
 </head>
 <body>
     <h1>Javascript</h1>
-    <h2>A value in JavaScript is always of a certain type. For example, a string or a number.
-        There are eight basic data types in JavaScript. 
     <script src="data.js"></script>
+    <script src="Type Conversions.js"></script>
     
 
 
