--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Javascript</h1>
     <script src="data.js"></script>
     <script src="Type Conversions.js"></script>
+    <script src="Variable.js"></script>
     
 
 
